# keyhound

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: pattern-reviewer.md
.github/workflows/: tests.yml
keyhound/: __init__.py  __main__.py  cli.py  entropy.py  git.py  patterns.py  scanner.py
tests/: test_binary_skip.py  test_entropy.py  test_patterns.py  test_scanner.py
