[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "keyhound"
version = "0.1.0"
description = "Dependency-free Python CLI secret scanner"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["security", "secrets", "scanner", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
keyhound = "keyhound.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["keyhound*"]
